--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -16,7 +16,7 @@
                    <div class="content">
                       
                       <h3>{{ slide.text }}</h3>
-                      <a href="package.php" class="btn">Каталог</a>
+                      <a routerLink="/catalog" class="btn">Каталог</a>
 
                   </div>
                   
