--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -12,9 +12,9 @@
  
        <div class="box">
           <h3>Контакты</h3>
-          <a href="#"> <i class="fas fa-phone"></i> +7 (953) 544-04-99 </a>
-          <a href="#"> <i class="fab fa-vk"></i> vk.com/parfumdelame_ru </a>
-          <a href="#"> <i class="fas fa-map"></i> ул. Анохина, д. 41, Петрозаводск </a>
+          <a href=""> <i class="fas fa-phone"></i> +7 (953) 544-04-99 </a>
+          <a href="vk.com/parfumdelame_ru"> <i class="fab fa-vk"></i> vk.com/parfumdelame_ru </a>
+          <a href=""> <i class="fas fa-map"></i> ул. Анохина, д. 41, Петрозаводск </a>
        </div>
  
     </div>
