--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -6,7 +6,7 @@
  
     <div class="box-container">
  
-       <div class="box" *ngFor="let category of categories">
+       <div routerLink="/catalog" class="box" *ngFor="let category of categories">
           <img src="{{ category.image }}" alt="image">
           <h3>{{category.name}}</h3>
        </div>
@@ -42,7 +42,7 @@
          <div class="content">
             <h3>Ароматическая Свеча «LEMON CURD»</h3>
             <p>Селективный аромат от мануфактуры Евгения Гора для настоящих гурманов!</p>
-            <a href="book.php" class="btn">Подробнее</a>
+            <a href="https://vk.com/market-161123001?q=lemon&w=product-161123001_6579847%2Fquery" target="_blank" class="btn">Подробнее</a>
          </div>
       </div>
 
@@ -53,7 +53,7 @@
          <div class="content">
             <h3>Свеча Французский сад</h3>
             <p>Вдохновленный романтическими садами Франции, аромат переносит вас в самое сердце благоухающего рая.</p>
-            <a href="book.php" class="btn">Подробнее</a>
+            <a href="https://vk.com/market-161123001?q=%D1%81%D0%B0%D0%B4&w=product-161123001_6622410%2Fquery" target="_blank" class="btn">Подробнее</a>
          </div>
       </div>
       
@@ -64,7 +64,7 @@
          <div class="content">
             <h3>Портативный диффузор Drop</h3>
             <p>Идеальный спутник дома, на работе и в машине. Интенсивное увлажнение скрасит долгую дорогу или напряженный рабочий день.</p>
-            <a href="book.php" class="btn">Подробнее</a>
+            <a href="https://vk.com/market-161123001?q=drop&w=product-161123001_6617564%2Fquery" target="_blank" class="btn">Подробнее</a>
          </div>
       </div>
 
