--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<div class="cursor-1" #cursor1></div>
+<div class="cursor-2" #cursor2></div>
+<app-loader></app-loader>
+
+<div [hidden]="!toggler">
+  <app-header></app-header>
+  <router-outlet></router-outlet>
+  <app-footer></app-footer>
+</div>
