--- a/src/app/views/about/about.component.html
+++ b/src/app/views/about/about.component.html
@@ -5,21 +5,21 @@
     </div>
  
     <div class="content">
-       <h3>why choose us?</h3>
+       <h3>Parfum De L'ame</h3>
        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure numquam nulla iusto corporis dolor commodi libero, vitae obcaecati optio rerum ab culpa nesciunt, earum mollitia quasi ipsam non. Aliquid, iure.</p>
        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid rerum, delectus voluptate aliquam quaerat iusto repellendus error nulla ab atque.</p>
        <div class="icons-container">
           <div class="icons">
+             <i class="fas fa-phone"></i>
+             <span>+7 (953) 544-04-99</span>
+          </div>
+          <div class="icons">
+             <i class="fab fa-vk"></i>
+             <span>vk.com/parfumdelame_ru</span>
+          </div>
+          <div class="icons">
              <i class="fas fa-map"></i>
-             <span>top destinations</span>
-          </div>
-          <div class="icons">
-             <i class="fas fa-hand-holding-usd"></i>
-             <span>affordable price</span>
-          </div>
-          <div class="icons">
-             <i class="fas fa-headset"></i>
-             <span>24/7 guide service</span>
+             <span>ул. Анохина, д. 41, Петрозаводск</span>
           </div>
        </div>
     </div>
