--- a/src/app/views/catalog/catalog.component.html
+++ b/src/app/views/catalog/catalog.component.html
@@ -9,19 +9,19 @@
          <h3>Парфюмерия</h3>
       </div>
       <div class="box" (click)="sortByCategories(1)">
-         <img src="../assets/icon-1.png" alt="image">
+         <img src="../assets/icon-2.png" alt="image">
          <h3>Благовония</h3>
       </div>
       <div class="box" (click)="sortByCategories(2)">
-         <img src="../assets/icon-1.png" alt="image">
+         <img src="../assets/icon-3.png" alt="image">
          <h3>Свечи ароматические</h3>
       </div>
       <div class="box" (click)="sortByCategories(3)">
-         <img src="../assets/icon-1.png" alt="image">
+         <img src="../assets/icon-4.png" alt="image">
          <h3>Диффузоры</h3>
       </div>
       <div class="box" (click)="sortByCategories(4)">
-         <img src="../assets/icon-1.png" alt="image">
+         <img src="../assets/icon-5.png" alt="image">
          <h3>Масла косметические</h3>
       </div>
 
@@ -42,7 +42,7 @@
           <div class="content">
              <h3>{{ product.name }}</h3>
              <p>{{ product.about }}</p>
-             <a href="book.php" class="btn">Подробнее</a>
+             <a href="{{ product.link }}" target="_blank" class="btn">Подробнее</a>
           </div>
        </div>
  
