--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -7,13 +7,12 @@
           <a routerLink="/"> <i class="fas fa-angle-right"></i> Главная</a>
           <a routerLink="/about"> <i class="fas fa-angle-right"></i> О нас</a>
           <a routerLink="/catalog"> <i class="fas fa-angle-right"></i> Категории</a>
-          <a href="book.php"> <i class="fas fa-angle-right"></i> Контакты</a>
        </div>
  
        <div class="box">
           <h3>Контакты</h3>
           <a href=""> <i class="fas fa-phone"></i> +7 (953) 544-04-99 </a>
-          <a href="vk.com/parfumdelame_ru"> <i class="fab fa-vk"></i> vk.com/parfumdelame_ru </a>
+          <a href="https://vk.com/parfumdelame_ru" target="_blank"> <i class="fab fa-vk"></i> vk.com/parfumdelame_ru </a>
           <a href=""> <i class="fas fa-map"></i> ул. Анохина, д. 41, Петрозаводск </a>
        </div>
  
