--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,9 +8,9 @@
     </div>
  
     <nav class="navbar" [ngClass]="{active: navbar}">
-       <a routerLink="">Главная</a>
-       <a routerLink="/about">О Нас</a>
-       <a routerLink="/catalog">Каталог</a>
+       <a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" (click)="disable()">Главная</a>
+       <a routerLink="/about" routerLinkActive="active" (click)="disable()">О Нас</a>
+       <a routerLink="/catalog" routerLinkActive="active" (click)="disable()">Каталог</a>
     </nav>
 
     <div class="icons"> 
