--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -41,6 +41,7 @@
   }
   
   .header .search-form input {
+    font-family: 'Quicksand';
     width: 100%;
     padding-right: 1rem;
     font-size: 1.7rem;
@@ -56,6 +57,9 @@
   
   .header .search-form label:hover {
     color: #0984e3;
+  }
+
+  .header .navbar {
   }
  
  .header .navbar a{
@@ -151,6 +155,7 @@
        padding:2rem;
        transition: .2s linear;
        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+       overflow-x: hidden;
     }
  
     .header .navbar.active{
